--- a/arch/arm/cpu/armv7/mx6/Kconfig
+++ b/arch/arm/cpu/armv7/mx6/Kconfig
@@ -72,6 +72,15 @@ config TARGET_MX6CUBOXI
 	bool "Solid-run mx6 boards"
 	select SUPPORT_SPL
 
+config TARGET_MX6DLTRIZEPS7PCONXS
+	bool "Support mx6dltrizesp7pconxs"
+
+config TARGET_MX6DLTRIZEPS7F500
+	bool "Support mx6dltrizesp7f500"
+
+config TARGET_MX6DLTRIZEPS7U100
+	bool "Support mx6dltrizesp7u100"
+
 config TARGET_MX6QARM2
 	bool "mx6qarm2"
 
@@ -161,6 +170,7 @@ source "board/boundary/nitrogen6x/Kconfig"
 source "board/compulab/cm_fx6/Kconfig"
 source "board/congatec/cgtqmx6eval/Kconfig"
 source "board/embest/mx6boards/Kconfig"
+source "board/freescale/mx6dltrizeps7/Kconfig"
 source "board/freescale/mx6qarm2/Kconfig"
 source "board/freescale/mx6qsabreauto/Kconfig"
 source "board/freescale/mx6sabresd/Kconfig"
